[project]
name = "social-info"
version = "0.1.0"
description = "Daily AI ecosystem raw aggregator"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/social_info"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
